--- a/Dogs.yaml
+++ b/Dogs.yaml
@@ -1,29 +1,29 @@
 # Provider.yaml - Proxies with FTP service information
-# Generated: 2025-08-27 22:59:03
+# Generated: 2025-08-27 23:05:49
 # Based on: Cati.yaml
-# URLs tested: 10
-# Successful proxies: 86
+# URLs tested: 8
+# Successful proxies: 80
 #
 # This file contains proxies with FTP service information in their names
 # Similar to the original provider.yaml structure
 #
 
 proxies:
-  - name: "Premium Proxy 1 - FTP[Not Tested]"
+  - name: "Premium Proxy 1 - FTP[SamFTP, FtpBD, ShowTime]"
     type: socks5
     server: 103.126.23.222
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 2 - FTP[SamFTP, EBox, IccFTP, Discovery, ShowTime, TimePassBD, EBox]"
+  - name: "Premium Proxy 2 - FTP[SamFTP, ShowTime]"
     type: socks5
     server: 103.38.55.55
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 3 - FTP[SamFTP, EBox, IccFTP, Discovery, TimePassBD, EBox]"
+  - name: "Premium Proxy 3 - FTP[ShowTime, IccFTP]"
     type: socks5
     server: 103.166.253.94
     port: 1088
@@ -44,35 +44,35 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 6 - FTP[SamFTP, IccFTP, CircleFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 6 - FTP[SamFTP, FtpBD, ShowTime, IccFTP, CircleFTP]"
     type: socks5
     server: 103.108.60.35
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 7 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 7 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 103.84.252.101
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 8 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 8 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 123.253.96.249
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 9 - FTP[SamFTP, Discovery, CircleFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 9 - FTP[SamFTP, FtpBD, ShowTime, CircleFTP, Discovery]"
     type: socks5
     server: 103.197.48.198
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 10 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 10 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 118.179.158.241
     port: 1088
@@ -93,7 +93,7 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 13 - FTP[SamFTP, IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 13 - FTP[SamFTP, FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 180.148.214.52
     port: 1088
@@ -107,21 +107,21 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 15 - FTP[SamFTP, IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 15 - FTP[SamFTP, FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 103.159.218.218
     port: 1920
     username: test
     password: test
 
-  - name: "Premium Proxy 16 - FTP[SamFTP, IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 16 - FTP[SamFTP, FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 43.229.210.8
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 17 - FTP[SamFTP, EBox, IccFTP, Discovery, ShowTime, TimePassBD, EBox]"
+  - name: "Premium Proxy 17 - FTP[SamFTP, ShowTime, IccFTP, Discovery, TimePassBD]"
     type: socks5
     server: 103.123.169.243
     port: 1088
@@ -142,28 +142,28 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 20 - FTP[SamFTP, CircleFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 20 - FTP[SamFTP, FtpBD, ShowTime, CircleFTP]"
     type: socks5
     server: 103.122.252.94
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 21 - FTP[SamFTP, Discovery, CircleFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 21 - FTP[SamFTP, FtpBD, ShowTime, CircleFTP, Discovery]"
     type: socks5
     server: 58.84.33.11
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 22 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 22 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 103.71.46.197
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 23 - FTP[SamFTP, EBox, IccFTP, CircleFTP, FtpBD, ShowTime, EBox]"
+  - name: "Premium Proxy 23 - FTP[SamFTP, FtpBD, ShowTime, IccFTP, CircleFTP]"
     type: socks5
     server: 202.144.201.98
     port: 1088
@@ -177,14 +177,14 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 25 - FTP[SamFTP, Discovery, CircleFTP, FtpBD]"
+  - name: "Premium Proxy 25 - FTP[SamFTP, FtpBD, ShowTime, CircleFTP, Discovery]"
     type: socks5
     server: 103.129.200.102
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 26 - FTP[SamFTP, CircleFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 26 - FTP[SamFTP, FtpBD, ShowTime, CircleFTP, Discovery]"
     type: socks5
     server: 103.197.48.126
     port: 1088
@@ -198,7 +198,7 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 28 - FTP[IccFTP, CircleFTP, FtpBD, ShowTime, EBox]"
+  - name: "Premium Proxy 28 - FTP[FtpBD, ShowTime, IccFTP, CircleFTP]"
     type: socks5
     server: 116.206.91.65
     port: 1088
@@ -212,42 +212,42 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 30 - FTP[Not Tested]"
+  - name: "Premium Proxy 30 - FTP[SamFTP, FtpBD, ShowTime, IccFTP, CircleFTP]"
     type: socks5
     server: 103.189.158.13
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 31 - FTP[SamFTP, IccFTP, CircleFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 31 - FTP[SamFTP, FtpBD, ShowTime, IccFTP, CircleFTP]"
     type: socks5
     server: 203.96.226.98
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 32 - FTP[SamFTP, IccFTP, CircleFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 32 - FTP[FtpBD, ShowTime, IccFTP, CircleFTP]"
     type: socks5
     server: 103.108.60.92
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 33 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 33 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 118.179.214.107
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 34 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 34 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 203.190.8.8
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 35 - FTP[SamFTP, Discovery, CircleFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 35 - FTP[FtpBD, ShowTime, CircleFTP, Discovery]"
     type: socks5
     server: 103.254.167.18
     port: 1088
@@ -261,14 +261,14 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 37 - FTP[Not Tested]"
+  - name: "Premium Proxy 37 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 123.49.39.120
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 38 - FTP[SamFTP, ShowTime]"
+  - name: "Premium Proxy 38 - FTP[SamFTP]"
     type: socks5
     server: 103.140.25.10
     port: 1088
@@ -282,77 +282,77 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 40 - FTP[Not Tested]"
+  - name: "Premium Proxy 40 - FTP[SamFTP, FtpBD, ShowTime, IccFTP, CircleFTP]"
     type: socks5
     server: 103.108.60.173
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 41 - FTP[SamFTP, EBox, IccFTP, Discovery, ShowTime, TimePassBD, EBox]"
+  - name: "Premium Proxy 41 - FTP[SamFTP, ShowTime, IccFTP, Discovery, TimePassBD]"
     type: socks5
     server: 103.166.253.92
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 42 - FTP[SamFTP, Discovery, CircleFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 42 - FTP[SamFTP, FtpBD, ShowTime, CircleFTP, Discovery]"
     type: socks5
     server: 103.129.200.173
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 43 - FTP[SamFTP, CircleFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 43 - FTP[SamFTP, FtpBD, CircleFTP]"
     type: socks5
     server: 103.122.254.33
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 44 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 44 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 103.84.252.97
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 45 - FTP[IccFTP, ShowTime, TimePassBD]"
+  - name: "Premium Proxy 45 - FTP[FtpBD, ShowTime, IccFTP, TimePassBD]"
     type: socks5
     server: 103.199.155.186
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 46 - FTP[SamFTP, IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 46 - FTP[SamFTP, FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 203.190.9.73
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 47 - FTP[Not Tested]"
+  - name: "Premium Proxy 47 - FTP[FtpBD, ShowTime]"
     type: socks5
     server: 220.247.165.129
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 48 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 48 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 123.253.96.148
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 49 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 49 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 202.4.105.122
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 50 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 50 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 103.245.96.21
     port: 1088
@@ -373,7 +373,7 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 53 - FTP[Not Tested]"
+  - name: "Premium Proxy 53 - FTP[FtpBD, ShowTime, CircleFTP, CtgHall]"
     type: socks5
     server: 103.186.238.1
     port: 9169
@@ -415,14 +415,14 @@ proxies:
     server: 45.115.112.138
     port: 7675
 
-  - name: "Premium Proxy 61 - FTP[IccFTP, ShowTime]"
+  - name: "Premium Proxy 61 - FTP[ShowTime, IccFTP]"
     type: socks5
     server: 122.102.35.105
     port: 1080
     username: user1
     password: user1
 
-  - name: "Premium Proxy 62 - FTP[IccFTP, Discovery, CircleFTP, FtpBD, ShowTime, TimePassBD]"
+  - name: "Premium Proxy 62 - FTP[FtpBD, ShowTime, IccFTP, CircleFTP, Discovery]"
     type: socks5
     server: 103.179.154.27
     port: 1080
@@ -443,7 +443,7 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 65 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 65 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 118.179.197.30
     port: 9090
@@ -465,7 +465,7 @@ proxies:
     server: 202.4.114.56
     port: 6699
 
-  - name: "Premium Proxy 69 - FTP[SamFTP, IccFTP, Discovery, CircleFTP, ShowTime]"
+  - name: "Premium Proxy 69 - FTP[SamFTP, ShowTime, IccFTP, CircleFTP, Discovery]"
     type: socks5
     server: 115.127.107.106
     port: 6699
@@ -484,14 +484,14 @@ proxies:
     server: 202.4.125.208
     port: 6699
 
-  - name: "Premium Proxy 72 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 72 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 180.211.169.46
     port: 1080
     username: test
     password: test
 
-  - name: "Premium Proxy 73 - FTP[SamFTP, IccFTP, Discovery, CircleFTP, ShowTime]"
+  - name: "Premium Proxy 73 - FTP[SamFTP, ShowTime, IccFTP, CircleFTP, Discovery]"
     type: socks5
     server: 115.127.39.18
     port: 6699
@@ -503,42 +503,42 @@ proxies:
     server: 118.179.152.102
     port: 9999
 
-  - name: "Premium Proxy 75 - FTP[SamFTP, IccFTP, Discovery, CircleFTP, ShowTime]"
+  - name: "Premium Proxy 75 - FTP[SamFTP, ShowTime, IccFTP, CircleFTP, Discovery]"
     type: socks5
     server: 115.127.106.158
     port: 6699
     username: ECats
     password: ECats
 
-  - name: "Premium Proxy 76 - FTP[SamFTP, IccFTP, CircleFTP]"
+  - name: "Premium Proxy 76 - FTP[SamFTP, ShowTime, IccFTP, CircleFTP, Discovery]"
     type: socks5
     server: 115.127.147.40
     port: 6699
     username: ECats
     password: ECats
 
-  - name: "Premium Proxy 77 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 77 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 118.179.81.98
     port: 6699
     username: test
     password: test
 
-  - name: "Premium Proxy 78 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 78 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 118.179.101.117
     port: 6699
     username: test9
     password: test9
 
-  - name: "Premium Proxy 79 - FTP[IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 79 - FTP[FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 103.4.64.163
     port: 6969
     username: test
     password: test
 
-  - name: "Premium Proxy 80 - FTP[SamFTP, IccFTP, FtpBD, ShowTime]"
+  - name: "Premium Proxy 80 - FTP[SamFTP, FtpBD, ShowTime, IccFTP]"
     type: socks5
     server: 123.253.37.149
     port: 6699
@@ -552,7 +552,7 @@ proxies:
     username: Admintest
     password: Admintest
 
-  - name: "Premium Proxy 82 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 82 - FTP[Not Tested]"
     type: socks5
     server: 45.125.220.114
     port: 1088
@@ -566,7 +566,7 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 84 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 84 - FTP[Not Tested]"
     type: socks5
     server: 45.125.223.105
     port: 1088
@@ -580,35 +580,35 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 86 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 86 - FTP[Not Tested]"
     type: socks5
     server: 103.48.161.132
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 87 - FTP[ShowTime]"
+  - name: "Premium Proxy 87 - FTP[Not Tested]"
     type: socks5
     server: 103.106.236.156
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 88 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 88 - FTP[Not Tested]"
     type: socks5
     server: 103.112.53.37
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 89 - FTP[FtpBD]"
+  - name: "Premium Proxy 89 - FTP[Not Tested]"
     type: socks5
     server: 103.112.53.106
     port: 1088
     username: test
     password: test
 
-  - name: "Premium Proxy 90 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 90 - FTP[Not Tested]"
     type: socks5
     server: 103.112.54.130
     port: 1088
@@ -622,7 +622,7 @@ proxies:
     username: test
     password: test
 
-  - name: "Premium Proxy 92 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 92 - FTP[Not Tested]"
     type: socks5
     server: 103.218.24.234
     port: 1088
@@ -650,7 +650,7 @@ proxies:
     username: ras
     password: ras
 
-  - name: "Premium Proxy 96 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 96 - FTP[Not Tested]"
     type: socks5
     server: 45.249.102.93
     port: 1088
@@ -685,21 +685,21 @@ proxies:
     username: test
     password: test123
 
-  - name: "Premium Proxy 101 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 101 - FTP[Not Tested]"
     type: socks5
     server: 103.120.202.73
     port: 1088
     username: test
     password: test123
 
-  - name: "Premium Proxy 102 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 102 - FTP[Not Tested]"
     type: socks5
     server: 103.120.203.188
     port: 1088
     username: test
     password: test123
 
-  - name: "Premium Proxy 103 - FTP[FtpBD, ShowTime]"
+  - name: "Premium Proxy 103 - FTP[Not Tested]"
     type: socks5
     server: 103.120.203.190
     port: 1088
