--- a/Dogs.yaml
+++ b/Dogs.yaml
@@ -841,7 +841,7 @@ proxies:
 
   - name: "Premium Proxy 123 - FTP[Not Tested]"
     type: socks5
-    server: 210.4.76.163
+    server: 103.112.53.194
     port: 9090
     username: MX
     password: XM
@@ -849,14 +849,14 @@ proxies:
   - name: "Premium Proxy 124 - FTP[ShowTime]"
     type: socks5
     server: 210.4.78.198
-    port: 1080
-    username: 1
-    password: 1
+    port: 11011
+    username: £xp3r!m£ntCat$
+    password: £xp3r!m£ntCat$
 
   - name: "Premium Proxy 125 - FTP[Not Tested]"
     type: socks5
-    server: 43.224.116.21
-    port: 1052
-    username: ras
-    password: ras
+    server: 113.11.13.1
+    port: 19955
+    username: £xp3r!m£ntCat$
+    password: £xp3r!m£ntCat$
 
