--- a/Dogs.yaml
+++ b/Dogs.yaml
@@ -842,9 +842,9 @@ proxies:
   - name: "Premium Proxy 123 - FTP[Not Tested]"
     type: socks5
     server: 103.112.53.194
-    port: 9090
-    username: MX
-    password: XM
+    port: 11011
+    username: £xp3r!m£ntCat$
+    password: £xp3r!m£ntCat$
 
   - name: "Premium Proxy 124 - FTP[ShowTime]"
     type: socks5
